--- a/smacofRO/smacofRO.tex
+++ b/smacofRO/smacofRO.tex
@@ -196,7 +196,7 @@
 \title{Smacof at 50: A Manual\\
 Part 4: smacofRO - Non-metric Smacof for Rank Order Data}
 \author{Jan de Leeuw - University of California Los Angeles}
-\date{Started May 12 2024, Version of May 13, 2024}
+\date{Started May 12 2024, Version of May 20, 2024}
 
 \begin{document}
 \maketitle
@@ -217,7 +217,7 @@ repositories smacofCode, smacofManual, and smacofExamples.
 The smacofRO program is a non-metric MDS program designed
 to handle a partial order over dissimilarities of pairs of objects selected
 from a single set. In the terminology of Coombs (1964) we are dealing
-QIVa similarity data. Typically the partial order is derived from a
+with QIVa similarity data. Typically the partial order is derived from a
 symmetric numerical matrix of dissimilarities or from a ranking
 (with or without ties) of the dissimilarities.
 
@@ -654,7 +654,7 @@ De Gruijter, D. N. M. 1967. {``{The Cognitive Structure of Dutch Political Parti
 De Leeuw, J. 1977. {``Correctness of Kruskal's Algorithms for Monotone Regression with Ties.''} \emph{Psychometrika} 42: 141--44.
 
 \bibitem[\citeproctext]{ref-deleeuw_E_17h}
----------. 2017. {``{Exceedingly Simple Monotone Regression (with Ties)}.''} 2017.
+---------. 2017. {``{Exceedingly Simple Monotone Regression (with Ties)}.''} 2017. \url{https://jansweb.netlify.app/publication/deleeuw-e-17-h/deleeuw-e-17-h.pdf}.
 
 \bibitem[\citeproctext]{ref-ekman_54}
 Ekman, G. 1954. {``{Dimensions of Color Vision}.''} \emph{Journal of Psychology} 38: 467--74.
